Add mithril and an album model. Everything is as simple as possible now, but it's a start. I'm just putting the script there in the html, to get things going, I will deal later with things like babel and proper folder structure. The way to create albums is also very basic, just a placeholder to see what kind of data I will need to get from Spotify. Once I have a user I will get the album list from her and populate the album models.

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "app"
   ],
   "author": "Jose Menor <josemenor@gmail.com> (http://josemenor.com)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mithril": "^0.2.3"
+  }
 }
