Add passport library

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "mithril": "^0.2.3",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2"
   },
   "devDependencies": {
     "webpack": "^1.12.14",
