Revert "Start adding a server."
This reverts commit 8f3e2e781155f29b121836cc099d9b211143332c.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server",
-    "startServer": "nodemon src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,11 +17,7 @@
   "author": "Jose Menor <josemenor@gmail.com> (http://josemenor.com)",
   "license": "MIT",
   "dependencies": {
-    "ejs": "^2.4.1",
-    "express": "^4.13.4",
-    "mithril": "^0.2.3",
-    "morgan": "^1.7.0",
-    "passport": "^0.3.2"
+    "mithril": "^0.2.3"
   },
   "devDependencies": {
     "webpack": "^1.12.14",
