--- a/package.json
+++ b/package.json
@@ -1,14 +1,7 @@
 {
   "name": "ramona",
-  "version": "0.0.1",
-  "description": "get your music the proper way",
+  "version": "0.1.0",
   "repository": "https://github.com/menor/ramona",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "spotify",
     "music",
@@ -16,14 +9,17 @@
   ],
   "author": "Jose Menor <josemenor@gmail.com> (http://josemenor.com)",
   "license": "MIT",
-  "dependencies": {
-    "mithril": "^0.2.3"
-  },
   "devDependencies": {
-    "html-webpack-plugin": "^2.22.0",
-    "html-webpack-template": "^5.0.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.8.4"
+    "react-scripts": "0.7.0"
+  },
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
