--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ramona",
   "version": "0.1.0",
   "repository": "https://github.com/menor/ramona",
+  "homepage": "http://menor.github.io/ramona",
   "keywords": [
     "spotify",
     "music",
@@ -10,6 +11,7 @@
   "author": "Jose Menor <josemenor@gmail.com> (http://josemenor.com)",
   "license": "MIT",
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
@@ -18,11 +20,13 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
